--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
-                    <test>com.test.DockerStatusTest.Gliacoder_live</test>
+                    <test>com.test.DockerStatusTest.gliacoder_live</test>
                 </configuration>
             </plugin>
         </plugins>
